--- a/views/invoices.html
+++ b/views/invoices.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
+  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
+
   <style>
     :root {
       --green: #2b5329; --amber: #ffcb05; --bg: #fbfff6; --border:#e2eadc; --ink:#0a0a0a;
