--- a/views/admin.html
+++ b/views/admin.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
+  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
 
 <style>
   :root{
