--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEW DELI • פיזורים</title>
   <link rel="stylesheet" href="/css/style.css" />
+  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
+
+
   <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
   <style>
