--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
+  <link rel="icon" href="/icons/icon-512.png" type="image/png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>כניסת מנהל • NEW DELI</title>
