--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
+  <link rel="icon" href="/icons/icon-512.png" type="image/png">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
 
   <title>מערכת ניהול משמרות • דף הבית</title>
