--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>ניהול משמרת ערב</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
+  <link rel="icon" href="/icons/icon-512.png" type="image/png">
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
 
