--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEW DELI • ניהול ספקים</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <link rel="icon" href="../public/icons/icon-512.png" type="image/png">
+  <link rel="icon" href="/icons/icon-512.png" type="image/png">
 
   <style>
     :root { --green:#2b5329; --bg:#fbfff6; --border:#e2eadc; --ink:#0a0a0a; }
